--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Angular2Breadcrumb</title>
+  <title>Breadcrumbs - Angular 2</title>
   <base href="/angular2-breadcrumb/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,5 +10,5 @@
 </head>
 <body>
   <app-root>Loading...</app-root>
-<script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.365fde027791cdac098a.bundle.js"></script><script type="text/javascript" src="main.68ff836dc8d378654611.bundle.js"></script></body>
+<script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.014e42e421d6a527bb64.bundle.js"></script><script type="text/javascript" src="main.0f7afcd7db284e442e62.bundle.js"></script></body>
 </html>
